<?xml version="1.0" ?> 
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"> 
    <modelVersion>4.0.0</modelVersion> 
    <parent> 
        <groupId>net.j7</groupId> 
        <artifactId>j7-tools</artifactId> 
        <version>1.0.0</version> 
    </parent> 
    <groupId>net.j7.thirddep</groupId> 
    <artifactId>thirddep-j7</artifactId> 
    <name>thirddep-j7</name> 
    <version>1.0.0</version> 
    <packaging>jar</packaging>
    <scm>
        <url>https://github.com/umjammer/vavi-image-avif/</url>
    </scm>
    <url>https://github.com/umjammer/vavi-image-avif/</url>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

<!--	<url>http://maven.apache.org</url>-->
    <build> 
        <plugins> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId> 
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <compilerArgs>
                        <arg>--add-exports</arg><arg>jdk.unsupported/com.sun.nio.file=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration> 
            </plugin> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId> 
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive> 
<!--                        <index>true</index>-->
<!--                        <manifest>-->
<!--                          <addClasspath>true</addClasspath>-->
<!--                        </manifest>-->
                        <manifestEntries> 
                            <SWT-OS>win32</SWT-OS> 
                            <SWT-WS>win32</SWT-WS> 
                            <SWT-Arch>x86_64</SWT-Arch> 
                        </manifestEntries> 
                    </archive> 
                </configuration> 
            </plugin> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId> 
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution> 
                        <phase>package</phase> 
                        <goals> 
                            <goal>shade</goal> 
                        </goals> 
                        <configuration> 
                            <transformers> 
                            </transformers> 
                            <filters> 
                            <!-- Exclude of dummy.sf and dummy.dsa -->
                                <filter> 
                                    <artifact>*:*</artifact> 
                                    <excludes> 
                                        <exclude>META-INF/*.SF</exclude> 
                                        <exclude>META-INF/*.DSA</exclude> 
                                        <exclude>META-INF/*.RSA</exclude> 
                                    </excludes> 
                                </filter> 
                            </filters> 
                        </configuration> 
                    </execution> 
                </executions> 
            </plugin> 
        </plugins> 
    </build> 
    <dependencies> 
        <dependency> 
            <groupId>junit</groupId> 
            <artifactId>junit</artifactId> 
            <scope>test</scope>
        </dependency> 
        <dependency> 
            <groupId>org.slf4j</groupId> 
            <artifactId>slf4j-api</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>org.slf4j</groupId> 
            <artifactId>slf4j-simple</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>ch.qos.logback</groupId> 
            <artifactId>logback-classic</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>net.j7.commons</groupId> 
            <artifactId>commons-j7</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>org.jocl</groupId> 
            <artifactId>jocl</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>com.carrotsearch</groupId> 
            <artifactId>hppc</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>com.jhlabs</groupId> 
            <artifactId>filters</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>org.eclipse.swt</groupId> 
            <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>org.opencv</groupId> 
            <artifactId>opencv</artifactId> 
            <scope>provided</scope> 
        </dependency> 
        <dependency> 
            <groupId>net.coobird</groupId> 
            <artifactId>thumbnailator</artifactId> 
            <scope>provided</scope> 
        </dependency>
        <dependency>
            <groupId>com.github.umjammer</groupId>
            <artifactId>vavi-commons</artifactId>
            <version>1.1.14</version>
        </dependency>
        <dependency>
            <groupId>com.github.umjammer</groupId>
            <artifactId>vavi-image</artifactId>
            <version>1.0.11</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.15.0</version>
        </dependency>
    </dependencies> 
</project> 
